# cargo-include-licenses

./: COPYRIGHT.txt  Cargo.toml  LICENSE-MIT.txt  README.md  flake.nix
src/: lib.rs  main.rs
