[package]
name = "cargo-include-licenses"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_metadata = "0.13.1"
walkdir = "2.3.2"
regex = "1.5.4"
copy_dir = "0.1.2"
clap = "2.33"