[package]
name = "cargo-include-licenses"
version = "0.0.1"
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Collects license files from the dependencies of a project into a predefined directory"
repository = "https://github.com/C1710/cargo-include-licenses"
readme = "README.md"
categories = ["command-line-utilities", "development-tools"]
keywords = ["cargo", "license"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_metadata = "0.13.1"
walkdir = "2.3.2"
regex = "1.5.4"
copy_dir = "0.1.2"
clap = "2.33"